--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     <link rel="stylesheet" href="style.css" />
     <title>Halo</title>
   </head>
-  <body onload="load()">
+  <body>
     <div class="container">
-      <div class="content" id="content">
-        <audio src="lagu.mp3" type="audio/mpeg" id="lagu"></audio>
-        <div class="waktu" id="waktu">00:00</div>
-        <div class="text" id="text">Santun <span id="waktu-sapa">siang</span> hadir support</div>
-      </div>
+      
       <button id="btn">click duong</button>
     </div>
 
